# cpp-cmake-demo01

./: CMakeLists.txt  README.md  all_content.md
src/: CMakeLists.txt  main.cpp
src/include/: mylib.h
src/lib/: module1.cpp  module2.cpp
tests/: CMakeLists.txt  test_main.cpp
